# crust

./: .gitignore  Cargo.toml  LICENSE  README  README.creole  bench  example-config  rustfmt.toml
.github/workflows/: rust.yml  shiftleft-analysis.yml
src/: builtins.rs  calc.rs  cd.rs  commands.rs  ls.rs  main.rs  prompt.rs  shared_functions.rs  tests.rs
src/builtins/: calc.rs  cat.rs  cd.rs  echo.rs  help.rs  ls.rs  mod.rs  spwd.rs
