[package]
authors = ["Phate6660", "Zenomat"]
edition = "2018"
exclude = [".github/"]
keywords = ["shell", "cross-platform"]
license-file = "LICENSE"
name = "crust"
readme = "README.creole"
repository = "https://github.com/Phate6660/crust"
version = "0.1.0"

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
rustyline = { version = "9.0.0", optional = true }

[features]
default = ["readline"]
readline = ["rustyline"]
