[package]
authors = ["Phate6660", "Zenomat"]
edition = "2018"
exclude = [".github/"]
keywords = ["shell", "cross-platform"]
license-file = "LICENSE"
name = "crust"
readme = "README.creole"
repository = "https://github.com/Phate6660/crust"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.19", optional = true }
colored = { version = "2.0.0", optional = true }
rustyline = { version = "9.0.0", optional = true }

[features]
colors = ["colored"]
default = ["readline"]
readline = ["rustyline"]
time = ["chrono"]
